<resources>
    <string name="app_name">Lembretes Casa da Xubs</string>
    <string name="lembretes">Lembretes</string>
    <string name="lembrete">Lembrete</string>
    <string name="entrar">Entrar</string>
    <string name="usuario">Usuario</string>
    <string name="textview">TextView</string>
    <string name="salvar">Salvar</string>
    <string name="escreva_aqui_o_seu_lembrete">Escreva aqui o seu lembrete</string>
    <string name="escreva_aqui_o_seu_lembrete_titulo">Escreva aqui o titulo do lembrete</string>
    <string name="data_lembrete">Data do lembrete</string>
    <string name="apagar">Apagar?</string>
    <string name="todo">TODO</string>
    <string name="senha">Senha</string>
    <string name="todo2">TODO</string>
</resources>